[gd_scene load_steps=14 format=2]

[ext_resource path="res://npc_Txt_Box/MEGAMAN10.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cena_Menu/Cena Principal/Font/ChiKareGo2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://cena_Menu/Cena Principal/Images/CENARIO_MESA_PRESIDENTE.jpg" type="Texture" id=3]
[ext_resource path="res://cena_Menu/Cena Principal/Buttons/iniciar_Botao.gd" type="Script" id=4]
[ext_resource path="res://cena_Menu/Cena Principal/Buttons/carregar_Botao.gd" type="Script" id=5]
[ext_resource path="res://mouse/click_mouse.tscn" type="PackedScene" id=6]
[ext_resource path="res://cena_Menu/Cena Principal/interface_Menu.gd" type="Script" id=8]
[ext_resource path="res://cena_Menu/Cena Principal/Images/menu_item1.png" type="Texture" id=9]
[ext_resource path="res://cena_Menu/Cena Principal/Images/menu_item2.png" type="Texture" id=10]
[ext_resource path="res://audio/Hino.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=3]
size = 98
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 63
font_data = ExtResource( 1 )

[node name="interface_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -658, 106 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItem1" type="Sprite" parent="."]
modulate = Color( 0.0588235, 0.788235, 0.956863, 0.901961 )
position = Vector2( 621, 154 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 9 )

[node name="MenuItem2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
position = Vector2( 620, 349 )
rotation = 0.00137282
scale = Vector2( 0.2, 0.12 )
texture = ExtResource( 10 )

[node name="MenuItem3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
position = Vector2( 618, 502 )
rotation = 0.00137282
scale = Vector2( 0.2, 0.12 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
margin_left = 107.0
margin_top = 100.0
margin_right = 1147.0
margin_bottom = 166.0
custom_colors/font_color_shadow = Color( 0.247059, 0.45098, 0.541176, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "EU, PRESIDENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version_Label" type="Label" parent="."]
visible = false
margin_left = 65.0
margin_top = 610.0
margin_right = 1105.0
margin_bottom = 675.0
custom_fonts/font = SubResource( 2 )
text = "Version 2.2
By Inteligados "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 641.5, 358.25 )
scale = Vector2( 1.05501, 1.06573 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="iniciar_Botao" type="Button" parent="."]
margin_left = 335.0
margin_top = 317.0
margin_right = 935.0
margin_bottom = 377.0
rect_min_size = Vector2( 360, 60 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
scene_to_load = "res://selecionar_fase/mapa_brasil.tscn"

[node name="start_Label" type="Label" parent="iniciar_Botao"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Novo jogo "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="carregar_Botao" type="Button" parent="."]
margin_left = 331.0
margin_top = 472.0
margin_right = 931.0
margin_bottom = 532.0
rect_min_size = Vector2( 360, 60 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
scene_to_load = "res://CENA_TESTE/CENA_TESTE.tscn"

[node name="load_Label" type="Label" parent="carregar_Botao"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Carregar jogo "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu-soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="click_mouse" parent="." instance=ExtResource( 6 )]

[connection signal="mouse_entered" from="iniciar_Botao" to="." method="_on_iniciar_Botao_mouse_entered"]
[connection signal="mouse_exited" from="iniciar_Botao" to="." method="_on_iniciar_Botao_mouse_exited"]
[connection signal="pressed" from="iniciar_Botao" to="." method="_on_iniciar_Botao_pressed"]
[connection signal="mouse_entered" from="carregar_Botao" to="." method="_on_carregar_Botao_mouse_entered"]
[connection signal="mouse_exited" from="carregar_Botao" to="." method="_on_carregar_Botao_mouse_exited"]
[connection signal="pressed" from="carregar_Botao" to="." method="_on_carregar_Botao_pressed"]
[connection signal="mouse_entered" from="carregar_Botao/load_Label" to="." method="_on_load_Label_mouse_entered"]
